Fix #9 - coding exercises server
Un-comment the shadow http server so that it is ready for the coding exercises.

Define a new alias 'Coding Exercises' to make it easier, update docs.

Also fix logging to silence Undertow (switch it from logback to slf4j) - see https://stackoverflow.com/a/61830114/204205

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,15 @@
             },
             "afterCLJReplJackInCode": "(do (require 'fulcro-todomvc.server) (fulcro-todomvc.server/http-server))",
             "autoSelectForJackIn": true
+        },
+        {
+            "name": "Coding Exercises",
+            "projectType": "shadow-cljs",
+            "cljsType": "shadow-cljs",
+            "menuSelections": {
+                "cljsDefaultBuild": "coding",
+                "cljsLaunchBuilds": ["coding"],
+            }
         }
     ]
 }
